Alignment corrected in create form for Composer and Vertex

--- a/style/commonSchedulerStyles.css
+++ b/style/commonSchedulerStyles.css
@@ -24,6 +24,10 @@
   width: 512px;
 }
 
+.scheduler-input-top {
+  padding-top: 13px;
+}
+
 .logo-alignment-style {
   display: flex;
   align-items: center;
@@ -117,4 +121,21 @@ body[data-jp-theme-light='true'].scroll-fix-header {
 
 .element-space-sm {
   padding-left: 5px;
+}
+
+.save-overlay {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 32px 0 0;
+  gap: 12px;
+  height: 64px;
+}
+
+.css-1wc848c-MuiFormHelperText-root {
+  font-size: 11px !important;
+}
+
+.module-top {
+  padding-top: 10px;
 }
