--- a/style/notebookScheduler_old.css
+++ b/style/notebookScheduler_old.css
@@ -33,18 +33,6 @@
   padding-left: 15px;
 }
 
-.create-job-scheduler-title {
-  padding: 0 15px;
-  height: 48px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
-  display: flex;
-  align-items: center;
-  color: var(--jp-ui-font-color0);
-}
-
 .dag-runs-list-table-parent {
   overflow: auto;
 }
@@ -280,10 +268,6 @@
   height: 48px;
   display: flex;
   border-bottom: 1px solid var(--jp-layout-color3);
-}
-
-.scheduler-region-top {
-  padding-top: 10px;
 }
 
 .enable-error-text-label a {
